Fix scrollbar resize problem on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,15 @@ body {
 	font-family: 'Lato', sans-serif;
 	background-image: url("../img/damask_pattern.png");
 	margin: 10px 0;
+
+	/* hide scrollbars */
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+	/* hide scrollbars */
+	display: none;
 }
 
 /* 360px and above */
